--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1512,7 +1512,6 @@ section {
 
 .testimonialItemHeader {
   height: 80px;
-  
 }
 .testimonialItemHeader h3 {
   display: -webkit-box;
@@ -1520,15 +1519,13 @@ section {
   -webkit-box-orient: vertical;
   overflow: hidden;
   text-overflow: ellipsis;
-
 }
-.testimonial-content  {
+.testimonial-content {
   display: -webkit-box;
   -webkit-line-clamp: 5; /* Limit to 3 lines */
   -webkit-box-orient: vertical;
   overflow: hidden;
   text-overflow: ellipsis;
-
 }
 
 .userIcon {
@@ -1564,7 +1561,7 @@ section {
 
 .reviewSource {
   /* text-align: right; */
-  display: flex ;
+  display: flex;
   justify-content: space-between;
   align-items: center;
 }
@@ -10091,7 +10088,7 @@ font-size: 20px;
   text-align: justify;
 }
 
-/* new */
+/* new css */
 
 /* banner button */
 .fancy {
@@ -10864,10 +10861,9 @@ font-size: 20px;
   position: relative;
 }
 .partner_badges .itemFooterLogo:last-child {
- padding-right: 0;
+  padding-right: 0;
 }
 .partner_badges .itemFooterLogo:last-child::after {
-
   display: none;
 }
 .partner_badges .itemFooterLogo::after {
@@ -10879,23 +10875,289 @@ font-size: 20px;
   right: -7px;
   width: 3px;
   background-color: #333;
-  opacity: .1;
+  opacity: 0.1;
 }
 
-.img_grid_review{
-  grid-template-columns: repeat(2,minmax(0,1fr));
+.img_grid_review {
+  grid-template-columns: repeat(2, minmax(0, 1fr));
   display: grid;
 }
-.img_grid_review img{
-width: 70%;
-height: 100%;
-object-fit: contain;
-
+.img_grid_review img {
+  width: 70%;
+  height: 100%;
+  object-fit: contain;
 }
 
-.cta_1_home{
+.cta_1_home {
   background-color: #333;
 }
-.cta_1_home .bodered{
- border: 3px solid #ffffff45;
+.cta_1_home .bodered {
+  border: 3px solid #ffffff45;
+}
+
+/* brand_build */
+.brand_build_main{
+    background-color: #f6f6f6;
+}
+
+.brand_build .accordion-item {
+  margin-bottom: 0px;
+  border: transparent;
+  border-bottom: 1px solid #000;
+}
+.brand_build .accordion-item{
+  background-color: transparent !important;
+}
+.brand_build .accordion-button{
+  background-color: transparent;
+}
+.brand_build .accordion-item:first-of-type,.accordion-item:last-of-type  {
+  border-radius: 0;
+}
+.brand_build .accordion-item:last-of-type .accordion-button.collapsed {
+  border-radius: 0;
+}
+.brand_build .accordion-button:not(.collapsed) {
+  color: #000;
+  background-color: transparent;
+  box-shadow: none;
+}
+.brand_build .accordion-button {
+  font-size: 20px;
+  padding: 1rem 5px;
+}
+.brand_build .accordion-body {
+  padding: 20px 0;
+}
+.brand_build_title {
+  font-size: 50px;
+}
+
+/* home */
+.pricing_home {
+  /* background-color: #f6f6f6; */
+}
+.pricing_row {
+  margin-top: 70px;
+}
+.pricing_item_main {
+  padding-top: 23px;
+}
+.pricing_item {
+  padding: 30px;
+  border: 2px solid #333333;
+  position: relative;
+  z-index: 22;
+}
+.pricing_item .Pricing_title {
+  position: relative;
+  font-size: 25px;
+
+  text-align: center;
+  color: #fff;
+  background-color: #000;
+  padding: 10px 25px;
+  margin-top: -55px;
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+.pricing_item .Pricing_title::after {
+  position: absolute;
+  content: "";
+  left: -29px;
+  top: -0px;
+  width: 30px;
+  height: 25px;
+  background-color: #000;
+  clip-path: polygon(100% 0%, 100% 100%, 51% 100%);
+}
+.pricing_item .Pricing_title::before {
+  position: absolute;
+  content: "";
+  right: -29px;
+  top: -0px;
+  width: 30px;
+  height: 25px;
+  background-color: #000;
+  clip-path: polygon(0% 0%, 51% 100%, 0% 100%);
+}
+.pricing_item .content {
+  width: 100%;
+}
+.pricing_item .content ul {
+  display: flex;
+  width: 100%;
+  flex-wrap: wrap;
+  row-gap: 10px;
+  column-gap: 20px;
+}
+.pricing_item .content ul li {
+  font-weight: 500;
+  position: relative;
+  padding-left: 20px;
+}
+.pricing_item .content ul li::after {
+  position: absolute;
+  content: "";
+  top: 50%;
+  width: 5px;
+  height: 5px;
+  background-color: #000;
+  left: 9px;
+  transform: translateY(-50%);
+  border-radius: 100%;
+}
+.item_price_titile {
+  display: flex;
+  gap: 50px;
+}
+.item_price_titile h5 {
+  font-size: 20px;
+  font-weight: 600;
+}
+.enquire_pricing_btn {
+  background-color: #000;
+  color: #fff;
+  /* text-transform: uppercase; */
+}
+.enquire_pricing_btn:hover {
+  background-color: #fff;
+  color: #000;
+}
+
+.price_next,
+.price_prev {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  -webkit-transform: translateY(-50%);
+  -moz-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  -o-transform: translateY(-50%);
+  background-color: #000;
+  width: 40px !important;
+  height: 40px !important;
+  border-radius: 100%;
+  transition: all 0.5s ease-in-out !important;
+  border: none !important;
+  color: #fff !important;
+  z-index: 99;
+}
+
+.price_prev {
+  left: -20px;
+}
+.price_next {
+  right: -20px;
+}
+
+/* why_sib */
+.why_sib {
+  background-color: #fff;
+}
+.why_left_item{
+  position: sticky;
+  top:150px;
+}
+.why_left_card{
+  padding: 30px;
+  /* background-color: #fff; */
+  border: 2px solid #333;
+}
+.item_why_sib {
+  padding: 25px;
+  /* background-color: #fff; */
+  border-radius: 20px;
+}
+.item_why_sib p {
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+/* .item_why_sib.bg {
+  background-color: #333;
+  color: #fff;
+} */
+.item_why_title {
+  display: flex;
+
+  gap: 20px;
+}
+.item_why_title h5 {
+  font-size: 45px;
+  -webkit-text-stroke: 2px #33333355;
+  color: white;
+}
+/* .item_why_sib.hover {
+  transition: all 0.2s ease-in-out;
+  /* scale: 1; */
+
+/* .item_why_sib.hover:hover {
+  scale: 1.02;
+} */
+
+/* power of sib */
+.sib_power{
+  background-color: #3333331a;
+}
+.item_sib_power {
+  padding: 20px;
+  border: 1px solid 3333331a;
+  min-height: 250px;
+  border-radius: 10px;
+  background-color: #fff;
+}
+.item_sib_power p{
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+.power_prev,
+.power_next {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  -webkit-transform: translateY(-50%);
+  -moz-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  -o-transform: translateY(-50%);
+  background-color: transparent;
+  width: 50px !important;
+  height: 50px !important;
+  border-radius: 100%;
+  transition: all 0.5s ease-in-out !important;
+  border: none !important;
+  color: #333 !important;
+  z-index: 99;
+  font-size: 20px;
+}
+.power_prev{
+  left: -50px;
+}
+.power_next{
+  right: -50px;
+}
+
+
+/* case study */
+.item_case_study{
+  width: 100%;
+  
+}
+.case-study-swiper .swiper-slide{
+  transition: all .5s ease-in-out;
+}
+
+.case-study-swiper .swiper-slide.swiper-slide-prev,.case-study-swiper .swiper-slide.swiper-slide-next {
+scale: .8;
+}
+.item_deliver_growth{
+  
 }
