--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -10896,8 +10896,8 @@ font-size: 20px;
 }
 
 /* brand_build */
-.brand_build_main{
-    background-color: #f6f6f6;
+.brand_build_main {
+  background-color: #f6f6f6;
 }
 
 .brand_build .accordion-item {
@@ -10905,13 +10905,14 @@ font-size: 20px;
   border: transparent;
   border-bottom: 1px solid #000;
 }
-.brand_build .accordion-item{
+.brand_build .accordion-item {
   background-color: transparent !important;
 }
-.brand_build .accordion-button{
+.brand_build .accordion-button {
   background-color: transparent;
 }
-.brand_build .accordion-item:first-of-type,.accordion-item:last-of-type  {
+.brand_build .accordion-item:first-of-type,
+.accordion-item:last-of-type {
   border-radius: 0;
 }
 .brand_build .accordion-item:last-of-type .accordion-button.collapsed {
@@ -11058,11 +11059,11 @@ font-size: 20px;
 .why_sib {
   background-color: #fff;
 }
-.why_left_item{
+.why_left_item {
   position: sticky;
-  top:150px;
+  top: 150px;
 }
-.why_left_card{
+.why_left_card {
   padding: 30px;
   /* background-color: #fff; */
   border: 2px solid #333;
@@ -11102,7 +11103,7 @@ font-size: 20px;
 } */
 
 /* power of sib */
-.sib_power{
+.sib_power {
   background-color: #3333331a;
 }
 .item_sib_power {
@@ -11112,12 +11113,12 @@ font-size: 20px;
   border-radius: 10px;
   background-color: #fff;
 }
-.item_sib_power p{
-    display: -webkit-box;
-    -webkit-line-clamp: 3;
-    -webkit-box-orient: vertical;
-    overflow: hidden;
-    text-overflow: ellipsis;
+.item_sib_power p {
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 .power_prev,
 .power_next {
@@ -11138,26 +11139,128 @@ font-size: 20px;
   z-index: 99;
   font-size: 20px;
 }
-.power_prev{
+.power_prev {
   left: -50px;
 }
-.power_next{
+.power_next {
   right: -50px;
 }
 
-
 /* case study */
-.item_case_study{
+.item_case_study {
   width: 100%;
-  
 }
-.case-study-swiper .swiper-slide{
-  transition: all .5s ease-in-out;
+.case-study-swiper .swiper-slide {
+  transition: all 0.5s ease-in-out;
 }
 
-.case-study-swiper .swiper-slide.swiper-slide-prev,.case-study-swiper .swiper-slide.swiper-slide-next {
-scale: .8;
+.case-study-swiper .swiper-slide.swiper-slide-prev,
+.case-study-swiper .swiper-slide.swiper-slide-next {
+  scale: 0.8;
 }
-.item_deliver_growth{
-  
+.deliverGrowth {
+  background-color: #000;
+}
+
+.deliver_growth_container {
+  /* display: none; */
+}
+.item_deliver_growth_main:last-child .item_deliver_growth:after {
+  display: none;
+}
+.item_deliver_growth {
+  position: relative;
+  padding: 30px;
+}
+.item_deliver_growth:after {
+  position: absolute;
+  content: "";
+  top: 30px;
+  height: 100px;
+  width: 2px;
+  right: 0;
+  background: linear-gradient(to bottom, #fff, #ffffff00);
+}
+
+/* case bocs */
+.casescard{
+  display: flex;
+  width: 100%;
+}
+.casebocs {
+  margin-bottom: 15px;
+  position: relative;
+  cursor: pointer;
+}
+
+.casebocs img {
+  border-radius: 8px;
+  width: 100%;
+  height: 120px;
+  -o-object-fit: cover;
+  object-fit: cover;
+}
+
+.casebocs.active img,
+.casebocs:hover img {
+  height: 300px;
+  transition: 0.6s;
+}
+
+.casebocs.active::before,
+.casebocs:hover::before {
+  background: linear-gradient(
+    175deg,
+    rgba(255, 0, 24, 0),
+    rgba(220, 53, 69, 0.7098039216),
+    #f0414f
+  );
+}
+
+.casebocs.active .case-discription h3,
+.casebocs:hover .case-discription h3 {
+  text-align: left;
+}
+
+.casebocs:before {
+  background: rgba(30, 82, 160, 0.8);
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  content: "";
+  top: 0;
+  bottom: 0;
+  z-index: 11;
+  left: 0;
+  right: 0;
+  border-radius: 8px;
+}
+
+.casebocs .case-discription {
+  position: absolute;
+  top: 25%;
+  z-index: 111;
+  padding: 20px;
+  width: 100%;
+}
+
+.casebocs .case-discription h3 {
+  text-align: center;
+  color: #fff;
+  z-index: 111;
+
+  position: relative;
+}
+
+.casebocs .case-discription p {
+  display: none;
+  font-size: 16px;
+  color: #fff;
+  margin-top: 30px;
+ 
+}
+
+.casebocs.active .case-discription p, .casebocs:hover .case-discription p{
+  display: block;
+    cursor: pointer;
 }
