--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -11223,7 +11223,8 @@ font-size: 20px;
 }
 
 .casebocs:before {
-  background: rgba(30, 82, 160, 0.8);
+  /* background: rgba(30, 82, 160, 0.8); */
+  background:#00000080;
   position: absolute;
   width: 100%;
   height: 100%;
