--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -868,7 +868,7 @@ section {
 }
 
 .itemSlider {
-  height: 115px;
+  height: 100px;
   /* background: #fff; */
   display: flex !important;
   align-items: center;
@@ -890,11 +890,11 @@ section {
 }
 
 .slick-slide {
-  margin: 0 10px;
+  margin: 0 5px;
 }
 
 .slick-list {
-  margin: 0px -10px;
+  margin: 0px -5px;
 }
 
 .inlineService {
@@ -1551,7 +1551,7 @@ section {
 
 .nameUser p {
   font-style: italic;
-  font-size: 15px;
+  font-size: 13px;
 }
 
 .reviewSource p {
@@ -11150,13 +11150,38 @@ font-size: 20px;
 }
 .why_left_card {
   padding: 30px;
-  /* background-color: #fff; */
-  border: 2px solid #333;
+  background: #000;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
 }
 .item_why_sib {
   padding: 25px;
-  /* background-color: #fff; */
-  border-radius: 20px;
+  background-color: #fff;
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+}
+.item_why_sib:hover{
+  box-shadow: var(--bs-box-shadow);
+}
+.btnPrimary{
+  background: var(--red-color);
+  border:2px solid transparent;
+  color: #fff;
+  font-weight: 600;
+  text-transform: uppercase;
+  padding: 12px 10px;
+  border-radius: 5px;
+}
+.btnPrimary:hover{
+  background: transparent;
+  color: #fff;
+  border-color: #fff;
 }
 .item_why_sib p {
   display: -webkit-box;
@@ -11176,7 +11201,7 @@ font-size: 20px;
   gap: 20px;
 }
 .item_why_title h5 {
-  font-size: 30px;
+  font-size: 40px;
   -webkit-text-stroke: 2px #33333355;
   color: white;
 }
@@ -11192,12 +11217,22 @@ font-size: 20px;
 .sib_power {
   background-color: #3333331a;
 }
+.mySwiper .swiper-wrapper{
+  align-items: stretch;
+}
+.mySwiper .swiper-slide {
+  display: flex;
+  height: auto !important; /* allow dynamic height with flex */
+}
 .item_sib_power {
-  padding: 20px;
-  border: 1px solid 3333331a;
-  min-height: 250px;
+  padding: 40px;
+  border: 1px solid #e0e0e0;
   border-radius: 10px;
   background-color: #fff;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
 }
 .item_sib_power p {
   display: -webkit-box;
@@ -11205,6 +11240,9 @@ font-size: 20px;
   -webkit-box-orient: vertical;
   overflow: hidden;
   text-overflow: ellipsis;
+}
+.item_why_sib:hover h4{
+  color: var(--red-color);
 }
 .power_prev,
 .power_next {
@@ -11235,9 +11273,13 @@ font-size: 20px;
 /* case study */
 .item_case_study {
   width: 100%;
+  box-shadow: var(--bs-box-shadow);
+  background: #fff;
+  border:1px solid #e0e0e0e0;
 }
 .case-study-swiper .swiper-slide {
   transition: all 0.5s ease-in-out;
+  padding: 20px;
 }
 
 .case-study-swiper .swiper-slide.swiper-slide-prev,
@@ -11355,6 +11397,7 @@ font-size: 20px;
   background-color:#fff;
   padding:20px 20px 20px 0px;
   margin-left: -2px;
+  height: 100%;
 }
 
 
@@ -11364,6 +11407,7 @@ font-size: 20px;
   min-height: 185px;
   background-size: cover;
 background-image: url(/assets/images/success-story/Infographic-File.png);
+text-align: center;
 }
 .item_satates img{
   width: 65px;
@@ -11376,13 +11420,13 @@ background-image: url(/assets/images/success-story/Infographic-File.png);
 .item_satates h4{
   margin-top: 25px;
   font-weight: 700;
-  font-size: 30px;
-  color:#0969b7;
+  font-size: 40px;
+  color:var(--red-color);
  
 }
 .item_satates p{
   font-size: 13px;
- 
+  font-weight: 500;
 }
 
 .item-case-study-left .middle-img img{
@@ -11391,11 +11435,22 @@ background-image: url(/assets/images/success-story/Infographic-File.png);
   display: block;
 }
 .item-case-study-left a{
-  background-color: var(--dark-blue-color);
+  background-color: var(--red-color);
   color: #fff;
   padding:4px 10px;
   font-size: 14px;
-  border-radius: 10px;
+  border-radius: 5px;
+  margin-left: 15px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+  display: inline-block;
+  transform: translateY(-10px);
+  -webkit-transform: translateY(-10px);
+  -moz-transform: translateY(-10px);
+  -ms-transform: translateY(-10px);
+  -o-transform: translateY(-10px);
 }
 
 .item-case-study-left{
@@ -11513,3 +11568,168 @@ background-image: url(/assets/images/success-story/Infographic-File.png);
   z-index: -1;
   opacity: .7;
 } */
+.leftWhatMenu ul{
+  margin-top: 30px;
+  counter-reset: item;
+}
+ .leftWhatMenu ul li{
+  margin: 25px 0;
+  padding:25px;
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+  background: #f7f7f7;
+  padding-left: 90px;
+  counter-increment: item;
+  position: relative;
+  max-height: 95px;
+  overflow: hidden;
+  transition: max-height 1s ease-in-out;
+  -webkit-transition: max-height 1s ease-in-out;
+  -moz-transition: max-height 1s ease-in-out;
+  -ms-transition: max-height 1s ease-in-out;
+  -o-transition: max-height 1s ease-in-out;
+}
+.leftWhatMenu ul li p{
+  font-size: 30px;
+  font-weight: 600;
+}
+.leftWhatMenu ul li:before {
+  content: counter(item) ". ";
+  position: absolute;
+  font-weight: bold;
+  left: 40px;
+  font-size: 18px;
+  top: 30px;
+  z-index: 2;
+}
+.leftWhatMenu ul li:after{
+  content: '';
+  position: absolute;
+  top: 30px;
+  left: 0;
+  width: 70px;
+  height: 30px;
+  background:#fff;
+  z-index:1 ;
+  border-radius: 0 20px 20px 0;
+  -webkit-border-radius: 0 20px 20px 0;
+  -moz-border-radius: 0 20px 20px 0;
+  -ms-border-radius: 0 20px 20px 0;
+  -o-border-radius: 0 20px 20px 0;
+}
+.leftWhatMenu ul li.active{
+  background: #fff;
+  box-shadow: var(--bs-box-shadow);
+  border:1px solid #e0e0e0;
+  max-height: 300px;
+}
+.leftWhatMenu ul li.active:after{
+  background: linear-gradient(to right,  rgba(0,0,0,0) 0%,rgba(227,26,32,0.65) 100%);
+}
+.getList{
+  padding: 10px 0 0 ;
+}
+.getList h5{
+  padding: 15px 0;
+  padding-left: 35px;
+  position: relative;
+  z-index: 1;
+}
+.getList h5:before{
+  content: "\f058";
+  position: absolute;
+  top:16px;
+  left: 0;
+  font-size: 20px;
+  color: var(--red-color);
+  font-family: var(--fa-style-family, "Font Awesome 6 Free");
+  font-weight: var(--fa-style, 900);
+}
+.rightWhat{
+  padding-left: 20px;
+  position: sticky;
+  position: -webkit-sticky;
+  top:100px;
+
+}
+.imgSize{
+  max-width: 100% !important;
+  max-height: 100% !important;
+}
+.imgBox{
+  width: 100%;
+  height: auto;
+}
+.badgeBox{
+  width: 100%;
+  height: 90px;
+  background: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 5px;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+}
+.badgeBox img{
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: contain;
+}
+.clientLogoBox{
+  width: 100%;
+  height: auto;
+  padding: 10px 5px;
+  margin: 15px 0;
+}
+.clientLogoBox img{
+ filter: brightness(0) invert(1);
+ -webkit-filter: brightness(0) invert(1);
+  width: 100%;
+  height: auto;
+  object-fit: contain;
+}
+.headerRightWhy{
+  position: sticky;
+  position: -webkit-sticky;
+  top: 75px;
+  z-index: 99;
+}
+.rightImgBox {
+  width: 100%;
+  height: 350px;
+}
+.rightImgBox img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 200px;
+  -webkit-border-radius: 200px;
+  -moz-border-radius: 200px;
+  -ms-border-radius: 200px;
+  -o-border-radius: 200px;
+  filter: drop-shadow(0px 0px 15px #ccc);
+  -webkit-filter: drop-shadow(0px 0px 15px #999);
+}
+.btnCase{
+  display: inline-block;
+  padding: 10px 30px;
+  color:#fff;
+  background: #000;
+  font-size: 14px;
+  border-radius: 40px;
+  -webkit-border-radius: 40px;
+  -moz-border-radius: 40px;
+  -ms-border-radius: 40px;
+  -o-border-radius: 40px;
+  font-weight: 600;
+}
+.btnCase:hover{
+  background: var(--red-color);
+}
